Cleaning UP password from some Groovy Tests